Bug 1712339 - Remove mouse event default action and revert bug 1674658 r=annevk a=pascalc Differential Revision: https://phabricator.services.mozilla.com/D120854